Add updateOrderItem endpoint to OrderController and implement its service logic